# marktplaats-2dehands-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  e2e.yml
e2e/: capture_authenticated_fixtures.py
e2e/fixtures/2dehands/: bid_favorites.json  favorites.json  my_listings.json  saved_searches.json  unread_notifications.json
e2e/fixtures/marktplaats/: conversations.json  favorites.json  unread_messages.json
e2e/marktplaats_2dehands_mcp/: conftest.py  test_authenticated_live.py  test_authenticated_mocked.py  test_live_api.py  test_zz_functional_coverage.py
src/marktplaats_2dehands_mcp/: __init__.py  account.py  api.py  auth.py  auth_session.py  categories.py  category_fetcher.py  formatting.py  listing.py  saved_searches.py  server.py  sites.py
tests/marktplaats_2dehands_mcp/: conftest.py  test_account.py  test_api.py  test_auth.py  test_auth_session.py  test_categories.py  test_category_fetcher.py  test_formatting.py  test_listing.py  test_saved_searches.py  test_server.py  test_sites.py
