[project]
name = "marktplaats-2dehands-mcp"
version = "0.1.0"
description = "MCP server for searching marktplaats.nl and 2dehands.be listings"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
marktplaats-2dehands-mcp = "marktplaats_2dehands_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marktplaats_2dehands_mcp"]
